Фикс ошибок, добавление оповещателей
